Mudança no nome

--- a/Snake/index.html
+++ b/Snake/index.html
@@ -8,7 +8,7 @@
 		<title>UrutuCruzeiroMataouAleja</title>
 	</head>
 	<body>
-		<h1>URUTU BICHO BRAVO</h1>
+		<h1>URUTU GAME</h1>
 		<canvas id="snake" width="512" height="512"></canvas>
 	</body>
 </html>
